--- a/CS450AssignmentTwo/CS450AssignmentTwo.vcxproj.filters
+++ b/CS450AssignmentTwo/CS450AssignmentTwo.vcxproj.filters
@@ -50,19 +50,19 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="src\fshader32.glsl">
-      <Filter>Source Files</Filter>
-    </None>
-    <None Include="src\vshader32.glsl">
-      <Filter>Source Files</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="src\InitShader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\CS450AssignmentTwo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\fshader.glsl">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="src\vshader.glsl">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
